--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -7,12 +7,27 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.riccardocalligaro.imdbmovies.presentation.feature.dashboard.HomeFragment"
+        android:name="com.riccardocalligaro.imdbmovies.presentation.feature.dashboard.feed.HomeFragment"
         android:label="home_fragment"
-        tools:layout="@layout/home_fragment" />
+        tools:layout="@layout/home_fragment">
+        <action
+            android:id="@+id/action_homeFragment_to_movieDetailsFragment"
+
+            app:destination="@id/movieDetailsFragment" />
+    </fragment>
+
+
     <fragment
         android:id="@+id/savedFragment"
         android:name="com.riccardocalligaro.imdbmovies.presentation.feature.saved.SavedFragment"
         android:label="saved_fragment"
         tools:layout="@layout/saved_fragment" />
+    <fragment
+        android:id="@+id/movieDetailsFragment"
+        android:name="com.riccardocalligaro.imdbmovies.presentation.feature.dashboard.detail.MovieDetailsFragment"
+        android:label="MovieDetailsFragment">
+        <argument
+            android:name="movie"
+            app:argType="com.riccardocalligaro.imdbmovies.domain.model.MovieDomainModel" />
+    </fragment>
 </navigation>
