--- a/app/src/main/res/layout/movie_details_fragment.xml
+++ b/app/src/main/res/layout/movie_details_fragment.xml
@@ -8,6 +8,10 @@
         <variable
             name="movie"
             type="com.riccardocalligaro.imdbmovies.domain.model.MovieDomainModel" />
+
+        <variable
+            name="viewModel"
+            type="com.riccardocalligaro.imdbmovies.presentation.feature.dashboard.detail.MovieDetailsViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -27,6 +31,7 @@
                 android:layout_height="match_parent"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleGravity="top"
+
                 app:expandedTitleMarginStart="@dimen/imdb_toolbar_offset_start"
                 app:expandedTitleMarginTop="@dimen/imdb_toolbar_offset_top"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
@@ -39,15 +44,16 @@
                     android:scaleType="centerCrop"
                     app:imageFullUrl="@{movie.imageUrl}"
                     app:imageThumbnail="@{movie.thumbUrl}"
-                    app:layout_collapseMode="parallax"
 
+                    app:layout_collapseMode="parallax"
                     tools:src="@tools:sample/backgrounds/scenic" />
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbar"
+                <com.google.android.material.appbar.MaterialToolbar
                     android:layout_width="match_parent"
                     android:layout_height="?actionBarSize"
                     app:layout_collapseMode="pin"
+                    app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark"
+                    app:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
                     app:title="@{movie.name}" />
 
 
@@ -65,6 +71,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <androidx.appcompat.widget.AppCompatRatingBar
+                    android:id="@+id/appCompatRatingBar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="@{movie.rating / 2}"
+                    android:stepSize="0.1"
+                    app:layout_constraintStart_toStartOf="@+id/textView"
+                    app:layout_constraintTop_toBottomOf="@+id/textView" />
+
                 <TextView
                     android:id="@+id/textView"
                     android:layout_width="wrap_content"
@@ -74,14 +90,22 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                 </TextView>
+
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.core.widget.NestedScrollView>
 
-        <!--        <android.support.design.widget.FloatingActionButton-->
-        <!--            android:id="@+id/fab"-->
-        <!--            app:layout_anchor="@id/movieAppBarLayout"-->
-        <!--            app:layout_anchorGravity="bottom|right|end" />-->
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/saveMovieFab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:onClick="@{() -> viewModel.saveMovie()}"
+            android:src="@{viewModel.saved ? @drawable/ic_check_24dp :  @drawable/ic_bookmark_24dp}"
+            app:layout_anchor="@id/movieAppBarLayout"
+            app:layout_anchorGravity="bottom|right|end"
+            app:tint="@android:color/white" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
